# src/main/java/de/rjst/cs/api/openapi/update/Response.java
@@ -43,4 +43,15 @@ class Response {
             }
             """;
 
+    public final String CUSTOMER_NOT_FOUND =
+        """
+            {
+              "timestamp": "2025-05-12T19:40:47.682+00:00",
+              "status": 404,
+              "error": "Not Found",
+              "message": "Customer not found",
+              "path": "/customers/9999999999"
+            }
+            """;
+
 }
