# src/main/java/de/rjst/cs/logic/RestExceptionHandler.java
@@ -1,6 +1,6 @@
 package de.rjst.cs.logic;
 
-import de.rjst.cs.api.model.ErrorResponse;
+import de.rjst.cs.api.model.ValidationErrorResponse;
 import java.util.HashMap;
 import java.util.Map;
 import org.springframework.http.HttpStatus;
@@ -14,14 +14,14 @@ public class RestExceptionHandler {
 
     @ResponseStatus(HttpStatus.BAD_REQUEST)
     @ExceptionHandler(MethodArgumentNotValidException.class)
-    public ErrorResponse handleInvalidArgument(final MethodArgumentNotValidException ex) {
+    public ValidationErrorResponse handleInvalidArgument(final MethodArgumentNotValidException ex) {
         final Map<String, String> errorMap = new HashMap<>();
         final var bindingResult = ex.getBindingResult();
         final var fieldErrors = bindingResult.getFieldErrors();
         fieldErrors.forEach(error -> {
             errorMap.put(error.getField(), error.getDefaultMessage());
         });
-        return new ErrorResponse("Validation failed", errorMap);
+        return new ValidationErrorResponse("Validation failed", errorMap);
     }
 
 }
